--- a/notebooks/TGAN/data_generating.ipynb
+++ b/notebooks/TGAN/data_generating.ipynb
@@ -47,7 +47,7 @@
    },
    "outputs": [],
    "source": [
-    "path = '../traces' # use your path\n",
+    "path = '../../traces' # use your path\n",
     "all_files = glob.glob(path + \"/*.json\")\n",
     "\n",
     "li = []\n",
@@ -89,8 +89,6 @@
    "outputs": [],
    "source": [
     "gen_frame = frame.copy()\n",
-    "#gen_frame = frame.explode('formats')\n",
-    "#gen_frame = gen_frame.drop(['requested_formats', 'tags', 'thumbnails', 'formats', 'http_headers', \"subtitles\", 'automatic_captions', 'chapters', 'age_limit', 'annotations', 'average_rating', 'is_live', 'series', 'season_number', 'episode_number', 'release_date', 'release_year', 'playlist', 'playlist_index', 'requested_subtitles', 'stretched_ratio', 'preference', 'player_url'], axis=1)\n",
     "\n",
     "gen_frame = gen_frame.explode('categories')\n",
     "gen_frame = gen_frame[['upload_date','categories','duration', 'view_count','like_count','dislike_count', 'formats']]\n",
@@ -102,9 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "music_frame"
@@ -160,49 +156,9 @@
    },
    "outputs": [],
    "source": [
-    "music_frame.reset_index(inplace=True)\n",
+    "#music_frame.reset_index(inplace=True)\n",
     "\n",
-    "music_frame = music_frame[music_frame[\"vcodec\"] != \"none\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Drop non-primitive (or string) data columns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We do this because the TGAN network can not evaluate/generate objects embedded in table cells."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tmp_frame = music_frame.convert_dtypes()\n",
-    "li = []\n",
-    "for col in tmp_frame:\n",
-    "    print(tmp_frame[col].dtype)\n",
-    "    if tmp_frame[col].dtype == 'object':\n",
-    "        li.append(col)\n",
-    "for item in li:\n",
-    "    music_frame = music_frame.drop(item, axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "music_frame = music_frame[music_frame[\"vcodec\"] != \"none\"]\n",
     "music_frame"
    ]
   },
@@ -226,30 +182,140 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sdv.tabular import CTGAN\n",
-    "model = CTGAN()\n",
-    "model.fit(music_frame)\n",
-    "new_data = model.sample(50)\n",
-    "new_data.describe()"
+    "clean_df = music_frame[['upload_date','duration', 'view_count','like_count','dislike_count', 'acodec', 'filesize', 'format' ,'fps', 'vcodec', 'protocol', 'container']].reset_index(drop=True)\n",
+    "\n",
+    "clean_df[\"like_count\"] = clean_df[\"like_count\"].fillna(0)\n",
+    "clean_df[\"container\"] = clean_df[\"container\"].fillna(\"none\")\n",
+    "\n",
+    "clean_df[\"dislike_count\"] = clean_df[\"dislike_count\"].fillna(0)\n",
+    "#clean_df['categories'] = clean_df['categories'].astype(\"string\")\n",
+    "# clean_df['format_id'] = clean_df['format_id'].astype(\"category\")\n",
+    "# clean_df['acodec'] = clean_df['acodec'].astype(\"category\")\n",
+    "clean_df['like_count'] = clean_df['like_count'].astype(\"int64\")\n",
+    "clean_df['dislike_count'] = clean_df['dislike_count'].astype(\"int64\")\n",
+    "#clean_df['height'] = clean_df['height'].astype(\"object\")\n",
+    "clean_df['fps'] = clean_df['fps'].astype(\"object\")\n",
+    "# clean_df['vcodec'] = clean_df['vcodec'].astype(\"category\")\n",
+    "# clean_df['protocol'] = clean_df['protocol'].astype(\"category\")\n",
+    "# clean_df['container'] = clean_df['container'].astype(\"category\")\n",
+    "clean_df['upload_date'] = clean_df['upload_date'].astype(\"int64\")\n",
+    "\n",
+    "\n",
+    "clean_df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Drop non-primitive (or string) data columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We do this because the TGAN network can not evaluate/generate objects embedded in table cells."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tmp_frame = music_frame.convert_dtypes()\n",
+    "# li = []\n",
+    "# for col in tmp_frame:\n",
+    "#     print(tmp_frame[col].dtype)\n",
+    "#     if tmp_frame[col].dtype == 'object':\n",
+    "#         li.append(col)\n",
+    "# for item in li:\n",
+    "#     music_frame = music_frame.drop(item, axis=1)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    }
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "new_data = model.sample(2000)\n",
-    "new_data.head()"
+    "clean_df\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from sdv.tabular import CTGAN\n",
+    "# model = CTGAN()\n",
+    "# model.fit(clean_df)\n",
+    "\n",
+    "from sdv.tabular import CopulaGAN\n",
+    "model = CopulaGAN()\n",
+    "model.fit(clean_df)\n",
+    "\n",
+    "# new_data = model.sample(50)\n",
+    "# new_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data = model.sample(2000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data[new_data['view_count'] < 0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_data.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_df"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Inspect data"
    ]
@@ -257,7 +323,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "frame.head(2)"
@@ -275,7 +345,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "frame.describe()"
@@ -285,6 +359,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -295,7 +372,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "len(frame['categories'].apply(sorted).transform(tuple).unique())"
@@ -304,7 +385,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "categories = pd.DataFrame(frame['categories'].apply(sorted).transform(tuple).unique())"
@@ -314,6 +399,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -324,7 +412,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "grouped = frame.groupby(\"categories\")"
@@ -333,7 +425,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "newFrame = frame['categories'].apply(sorted).transform(tuple)"
@@ -342,7 +438,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "frame[\"tupleCat\"] = newFrame"
@@ -351,7 +451,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "frame[\"tupleCat\"]"
@@ -360,7 +464,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "frame.groupby(\"tupleCat\").agg(\"count\")[\"id\"]"
@@ -368,21 +476,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Note: make a bar chart of category video count"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "## Plotting relations between categories and other characteristics"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Upload date"
    ]
@@ -390,7 +510,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
@@ -402,21 +526,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Popularity"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### Plot popularity"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Note: like/dislike ratio is not being used for calculating the popularity of a video (see paragraph under graphs)."
    ]
@@ -424,7 +560,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# For each entry, calculate its popularity\n",
@@ -448,7 +588,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Plot popularity\n",
@@ -461,7 +605,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### Plot like/dislike ratio"
    ]
@@ -469,7 +617,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
@@ -481,7 +633,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "In the boxplot above, we find that the ratio between likes and dislikes on a video is hardly ever below 1. Therefore, we may conclude that viewers are more inclined to indicate which videos they like than to indicate which videos they dislike. And indeed, content creators usually encourage their audience to like their videos. Therefore, the ratio between likes and dislikes seems to be positively dominated by a relatively high number of likes.\n",
     "\n",
@@ -490,21 +646,33 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "### Available representations"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### Number of representations"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "Not solved yet."
    ]
@@ -512,7 +680,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "df1 = (pd.concat({i: pd.DataFrame(x) for i, x in frame.pop('formats').items()})\n",
@@ -534,6 +706,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -548,7 +723,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### Average bitrate"
    ]
@@ -556,7 +735,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# Create column for average bitrate (kbps)\n",
@@ -579,7 +762,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
@@ -590,7 +777,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### File types"
    ]
@@ -598,7 +789,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "df1.groupby('categories')"
@@ -608,6 +803,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
     "scrolled": true
    },
    "outputs": [],
@@ -617,7 +815,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### Framerates"
    ]
@@ -625,7 +827,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
@@ -636,7 +842,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "source": [
     "#### Durations"
    ]
@@ -644,7 +854,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(figsize=(20, 10))\n",
@@ -656,7 +870,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
