--- a/notebooks/TGAN/testnotebook.ipynb
+++ b/notebooks/TGAN/testnotebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,80 +39,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = load_category_dataframe(CATEGORY_NAME)\n",
-    "#data.head()"
+    "data.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/torch/cuda/__init__.py:52: UserWarning: CUDA initialization: Found no NVIDIA driver on your system. Please check that you have an NVIDIA GPU and installed a driver from http://www.nvidia.com/Download/index.aspx (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:100.)\n",
-      "  return torch._C._cuda_getDeviceCount() > 0\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:265: ConvergenceWarning: Initialization 1 did not converge. Try different init parameters, or increase max_iter, tol or check for degenerate data.\n",
-      "  warnings.warn('Initialization %d did not converge. '\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:265: ConvergenceWarning: Initialization 1 did not converge. Try different init parameters, or increase max_iter, tol or check for degenerate data.\n",
-      "  warnings.warn('Initialization %d did not converge. '\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:265: ConvergenceWarning: Initialization 1 did not converge. Try different init parameters, or increase max_iter, tol or check for degenerate data.\n",
-      "  warnings.warn('Initialization %d did not converge. '\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:147: ConvergenceWarning: Number of distinct clusters (2) found smaller than n_clusters (10). Possibly due to duplicate points in X.\n",
-      "  label = cluster.KMeans(n_clusters=self.n_components, n_init=1,\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:147: ConvergenceWarning: Number of distinct clusters (4) found smaller than n_clusters (10). Possibly due to duplicate points in X.\n",
-      "  label = cluster.KMeans(n_clusters=self.n_components, n_init=1,\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:265: ConvergenceWarning: Initialization 1 did not converge. Try different init parameters, or increase max_iter, tol or check for degenerate data.\n",
-      "  warnings.warn('Initialization %d did not converge. '\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:265: ConvergenceWarning: Initialization 1 did not converge. Try different init parameters, or increase max_iter, tol or check for degenerate data.\n",
-      "  warnings.warn('Initialization %d did not converge. '\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:147: ConvergenceWarning: Number of distinct clusters (2) found smaller than n_clusters (10). Possibly due to duplicate points in X.\n",
-      "  label = cluster.KMeans(n_clusters=self.n_components, n_init=1,\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:147: ConvergenceWarning: Number of distinct clusters (2) found smaller than n_clusters (10). Possibly due to duplicate points in X.\n",
-      "  label = cluster.KMeans(n_clusters=self.n_components, n_init=1,\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:147: ConvergenceWarning: Number of distinct clusters (2) found smaller than n_clusters (10). Possibly due to duplicate points in X.\n",
-      "  label = cluster.KMeans(n_clusters=self.n_components, n_init=1,\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/utils/validation.py:67: FutureWarning: Pass n_components=10 as keyword args. From version 0.25 passing these as positional arguments will result in an error\n",
-      "  warnings.warn(\"Pass {} as keyword args. From version 0.25 \"\n",
-      "/home/manzi/.anaconda3/lib/python3.8/site-packages/sklearn/mixture/_base.py:147: ConvergenceWarning: Number of distinct clusters (2) found smaller than n_clusters (10). Possibly due to duplicate points in X.\n",
-      "  label = cluster.KMeans(n_clusters=self.n_components, n_init=1,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = CTGAN()\n",
     "model.fit(data)"
@@ -120,12 +59,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#new_data = model.sample(215)\n",
-    "#new_data.head()"
+    "new_data = model.sample(215)\n",
+    "new_data.head()"
    ]
   },
   {
@@ -137,17 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saved model to models/Gaming.pk1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model_path = os.path.join('models', \"{}.pk1\".format(CATEGORY_NAME))\n",
     "\n",
